# aegis

./: .gitignore  Cargo.toml  README.md  devices.nix  flake.nix
.github/workflows/: ci-deb.yml  ci-docker.yml  ci-flatpak.yml
crates/aegis-desc/: Cargo.toml
crates/aegis-ip/: Cargo.toml
crates/aegis-pack/: Cargo.toml
crates/aegis-sim/: Cargo.toml
crates/athena/: .envrc  Cargo.toml
crates/athena/locales/: de.yml  en.yml  es.yml  fr.yml  ja.yml  zh-CN.yml
crates/athena/src/: app.rs  config.rs  data_packs.rs  editor.rs  first_run.rs  lib.rs  main.rs  project.rs  theme.rs  toolchain.rs
crates/athena/src/ui/: about.rs  console.rs  content.rs  data_pack_view.rs  home.rs  menu_bar.rs  mod.rs  new_project.rs  settings.rs  sidebar.rs  status_bar.rs
docs/arch/: README.md  bram.md  clb.md  clock.md  configuration.md  dsp.md  io.md  pdk.md  routing.md  serdes.md
examples/blinky/: blinky.v  default.nix  place_io.py
ip/: .envrc  pubspec.lock.json  pubspec.yaml
ip/data/: descriptor.schema.json
ip/lib/: aegis_ip.dart
ip/test/: descriptor_test.dart
nextpnr-aegis/: aegis.cc  aegis_test.cc
pkgs/aegis-ip/: deb.nix  default.nix
pkgs/aegis-ip-tools/: default.nix
pkgs/aegis-pack/: default.nix
pkgs/aegis-sim/: default.nix
pkgs/aegis-tapeout/: default.nix
pkgs/aegis-tapeout-lr/: default.nix
pkgs/athena/: deb.nix  default.nix
pkgs/gf180mcu-pdk/: default.nix
pkgs/nextpnr-aegis/: default.nix
pkgs/sky130-pdk/: default.nix
tests/blinky-sim/: blinky.pcf  blinky_test.v  default.nix
tests/counter-verify/: counter.pcf  counter.v  default.nix
(+107 files in other folders)
